national intake graph

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
         .nav-button {
             position: absolute;
-            bottom: 80px; /* Adjust the distance from the bottom */
+            bottom: 60px; /* Adjust the distance from the bottom */
             cursor: pointer;
             width: 40px; /* Set the desired width */
             height: 40px; /* Set the desired height */
@@ -51,7 +51,7 @@
         <img class="nav-button" src="images/scroll.svg" alt="Next Section" onclick="scrollToNextSection()">
     </section>
     <section id="section2" class="section">
-        <img src="images/2.svg" alt="Section 2 Image">
+        <img src="images/2.png" alt="Section 2 Image">
         <img class="nav-button" src="images/scroll.svg" alt="Next Section" onclick="scrollToNextSection()">
     </section>
     <section id="section3" class="section">
@@ -63,7 +63,11 @@
         <img class="nav-button" src="images/scroll.svg" alt="Next Section" onclick="scrollToNextSection()">
     </section>
     <section id="section5" class="section">
-        <img src="images/map0.png" alt="Section 5 Image">
+        <img src="images/5.svg" alt="Section 5 Image">
+        <img class="nav-button" src="images/scroll.svg" alt="Next Section" onclick="scrollToNextSection()">
+    </section>
+    <section id="section6" class="section">
+        <img src="images/map0.png" alt="Section 6 Image">
     </section>
     <script>
         document.addEventListener("DOMContentLoaded", function () {
