--- a/index.html
+++ b/index.html
@@ -139,11 +139,11 @@
             <svg id="svg2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 93.66 41.67">
                 <defs>
                     <linearGradient id="progress" x1="0" y1="0" x2="1" y2="0">
-                        <stop id="stop1" offset="0" stop-color="#4D6489"/>
-                        <stop id="stop2" offset="0" stop-color="#DBC6C0"/>
+                        <stop id="stop1" offset="0" stop-color="#1C3150"/>
+                        <stop id="stop2" offset="0" stop-color="#F8EFEB"/>
                     </linearGradient>
                 </defs>
-                <path fill="url(#progress)" id="path4" d="m80.83,41.67c-5.6,0-10.48-3.63-12.18-8.84H25.01c-1.7,5.21-6.58,8.84-12.18,8.84-7.08,0-12.83-5.76-12.83-12.84,0-2.91,1.02-5.74,2.84-8-1.82-2.27-2.84-5.09-2.84-8C0,5.76,5.76,0,12.83,0c5.6,0,10.48,3.63,12.18,8.84h43.64c1.7-5.21,6.58-8.84,12.18-8.84,7.08,0,12.83,5.76,12.83,12.84,0,2.91-1.02,5.73-2.84,8,1.83,2.26,2.84,5.09,2.84,8,0,7.08-5.75,12.84-12.83,12.84Z"/>
+                <path fill="url(#progress)" id="path4" d="m80.83,41.67c-5.6,0-10.48-3.63-12.18-8.84H25.01c-1.7,5.21-6.58,8.84-12.18,8.84-7.08,0-12.83-5.76-12.83-12.84,0-2.91,1.02-5.74,2.84-8-1.82-2.27-2.84-5.09-2.84-8C0,5.76,5.76,0,12.83,0c5.6,0,10.48,3.63,12.18,8.84h43.64c1.7-5.21,6.58-8.84,12.18-8.84,7.08,0,12.83,5.76,12.83,12.84,0,2.91-1.02,5.73-2.84,8,1.83,2.26,2.84,5.09,2.84,8,0,7.08-5.75,12.84-12.83,12.84Z" stroke="#1C3150" stroke-width="0.15" />
             </svg>
 
             <input id="slider" list="steplist" type="range" min="0" max="6" step="1" oninput="sliderChange(this.value)">
