--- a/index.html
+++ b/index.html
@@ -6,108 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Paws and Ponder</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@300&display=swap">
-
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            font-family: 'Arial', sans-serif;
-        }
-
-        header {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            padding: 10px;
-            background-color: #F8EFEB;
-            z-index: 1000;
-            cursor: pointer; /* Add cursor pointer for better user experience */
-            font-family: 'Kumbh Sans', sans-serif; /* Set the font to Kumbh Sans */
-            color: #1C3150; /* Set the text color to white */
-            font-size: 0.75em;
-            display: flex;
-            align-items: center; /* Center the content vertically */
-            justify-content: center;
-        }
-
-        .paw-print {
-            margin-right: 10px; /* Adjust margin between title and paw print */
-            font-size: 2em; /* Adjust the font size of the paw print */
-            color: #4D6489
-        }
-
-        h1 {
-            margin: 0; /* Remove default margin for better centering */
-        }
-
-
-
-        section {
-            height: 100vh;
-            display: flex;
-            flex-direction: column; /* Align items vertically */
-            justify-content: center;
-            align-items: center;
-            color: #fff;
-            font-size: 2em;
-            padding: 20px; /* Add padding for spacing inside each section */
-            position: relative; /* Add position relative to create a stacking context */
-        }
-
-        .section {
-            background-color: #F8EFEB;
-        }
-
-        .section4text{
-            align-items: flex-start;
-        }
-
-        img {
-            max-width: 100%;
-            height: auto;
-            max-height: 85vh; /* Set a maximum height if needed */
-            margin-top: 0;
-        }
-
-        .nav-button {
-            position: absolute;
-            bottom: 70px; /* Adjust the distance from the bottom */
-            left: 50%; /* Center the button horizontally */
-            transform: translateX(-50%); /* Center the button horizontally */
-            cursor: pointer;
-            width: 40px; /* Set the desired width */
-            height: 40px; /* Set the desired height */
-        }
-
-        /* Add styles for the interactable graph */
-        .graph {
-            padding-left: 1em;
-            width: 80%; /* Adjust the width of the graph */
-            max-width: 600px; /* Set a maximum width if needed */
-            margin-top: 20px; /* Add margin to create space for the graph */
-            font-family: 'Kumbh Sans', sans-serif; /* Change the font family */
-            color: #1C3150; /* Change the text color */
-        }
-
-                /* Add styles for the graph title */
-        .graph-title {
-            margin-top: 1.5em;
-            margin-bottom: 0em;
-            font-family: 'Kumbh Sans', sans-serif;
-            font-size: 1.5em; /* Adjust the font size for the title */
-            color: #1C3150; /* Set the text color for the title */
-            text-align: left; /* Center the text */
-        }
-
-
-        /* Add more styles as needed for specific elements within the graph */
-        #output, #amount {
-            font-size: 15px; /* Adjust the font size for the output elements */
-            font-weight: bold;
-        }
-
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
