--- a/index.html
+++ b/index.html
@@ -173,14 +173,14 @@
                           document.getElementById("stop1").setAttribute("offset", amt);
                           document.getElementById("stop2").setAttribute("offset", amt);
                         }
-
+                        //bone values
                         const values = [
-                           [2018, 79.3, "3,172"],
-                           [2019, 79, "3,160"],
-                           [2020, 53, "2,121"],
-                           [2021, 64, "2,562"],
-                           [2022, 57.6, "2,303"],
-                           [2023, 54.7, "2,188"],
+                           [2018, 73.7, "22,111"],
+                           [2019, 84, "25,212"],
+                           [2020, 62.1, "18,633"],
+                           [2021, 69.8, "20,939"],
+                           [2022, 62.1, "18,638"],
+                           [2023, 51.5, "15,457"],
                         ];
 
                         function sliderChange(val) {
