--- a/index.html
+++ b/index.html
@@ -214,14 +214,11 @@
                 <article>
                 <div class="step">
                     <div class="inner">
-                        <h3>2023 Pennsylvania Total Shelter Intakes</h3>
-                        <p>This map is a call to action. By choosing adoption over buying from breeders or pet stores, individuals can make a significant impact on the welfare of homeless animals. Opting to adopt directly contributes to addressing the issue of pet overpopulation, and each adoption is a step toeard building a more humane and responsible society for our beloved four-legged friends! Join us in making a simple yet impactful choice: choose to adopt and make a difference in the lives of shelter animals across PA.</p>
+                        <p>This map is a call to action. By choosing adoption over buying from breeders or pet stores, individuals can make a significant impact on the welfare of homeless animals. Opting to adopt directly contributes to addressing the issue of pet overpopulation, and each adoption is a step toward building a more humane and responsible society for our beloved four-legged friends! Join us in making a simple yet impactful choice: choose to adopt and make a difference in the lives of shelter animals across PA.</p>
                     </div>
                 </div>
                 <div class="step">
-                    <div class="inner">
-                        <h3>Pennsylvania Puppy Mill Map</h3>
-                        <p>This map is a call to action. By choosing adoption over buying from breeders or pet stores, individuals can make a significant impact on the welfare of homeless animals. Opting to adopt directly contributes to addressing the issue of pet overpopulation, and each adoption is a step toeard building a more humane and responsible society for our beloved four-legged friends! Join us in making a simple yet impactful choice: choose to adopt and make a difference in the lives of shelter animals across PA.</p>
+                    <div class="inner2">
                     </div>
                 </div>
             </article>
