--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
 
             figure
                 //.style("height", figureHeight + "px")
-                .style("top", figureMarginTop + "px");
+                .style("top","20px");
 
             // 3. tell scrollama to update new element dimensions
             scroller.resize();
